entity_macros/tests/ui/attribute/not-deriving-ent.stderr
error: cannot find attribute `ent` in this scope
 --> $DIR/not-deriving-ent.rs:3:1
  |
3 | #[include_ent_core]
  | ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
