entity_macros/tests/ui/attribute/not-deriving-ent.rs
use entity::include_ent_core;

#[include_ent_core]
#[derive(Clone)]
pub struct SimpleEnt {}

fn main() {}
